fixed background
now background covers the whole webpage

--- a/style.css
+++ b/style.css
@@ -7,15 +7,13 @@
   --dark-color: #b7f4eb;
 }
 
-html {
+html { 
     width: 100%;
-    height: 100%;
-}
+    background: url('rivendell.jpg') no-repeat center center fixed; 
+    background-size: cover;
+  }
 
 body {
-    background-image: url('rivendell.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
     font-family: 'Prompt', sans-serif;
     letter-spacing: 2px;
 }
@@ -125,13 +123,11 @@ img {
 }
 
 @media screen and (max-width: 700px) {
-    body {
-        background-image: url('galadriel.jpg');
+    html { 
+        background: url('galadriel.jpg') no-repeat center center fixed; 
         background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-        
-    }
+      }
+
     .footer {
         position: static;
     }
